syntax = "proto3";

package ai.verta.modeldb.versioning;
option go_package = "github.com/VertaAI/modeldb/protos/gen/go/protos/public/modeldb/versioning";

option java_multiple_files = true;

message EnvironmentBlob {
    oneof content {
        PythonEnvironmentBlob python = 1;
        DockerEnvironmentBlob docker = 2;
    }
    repeated EnvironmentVariablesBlob environment_variables = 3;
    repeated string command_line = 4;
}

message EnvironmentVariablesBlob {
    string name = 1;
    string value = 2;
}

message VersionEnvironmentBlob {
    int32 major = 1;
    int32 minor = 2;
    int32 patch = 3;
}

message PythonRequirementEnvironmentBlob {
    string library = 1;
    string constraint = 2;
    VersionEnvironmentBlob version = 3;
}

message PythonEnvironmentBlob {
    VersionEnvironmentBlob version = 1;
    repeated PythonRequirementEnvironmentBlob requirements = 2;
    repeated PythonRequirementEnvironmentBlob constraints = 3;
}

message DockerEnvironmentBlob {
    string repository = 1;
    string tag = 2;
    string sha = 3;
}
